welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:16: error: ';' expected but 'else' found.
	else if (estDosMur()==true){{
        ^