welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(estSurBiscuit()==false ){
	
	if (estSurBiscuit()==true){
		prendBiscuit()
		while(estSurBiscuit()==false){
			avance()
		}
		recule()
		poseBiscuit() 
		recule()
		}
	}

	
	else if (estDosMur()==true){{
		gauche()
		avance()
		gauche()
		avance()
		gauche()
	}
	 else{
	 	recule()
	 }
}
